solved the nav not showing on mobile view issue

--- a/input.css
+++ b/input.css
@@ -19,12 +19,6 @@
     background: rgb(4, 27, 63);
 }
 
-nav {
-    overflow: hidden;
-    position: fixed;
-    top: 0;
-    width: 100%;
-}
 
 #features {
     background-color: #fbfafc;
